<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/contact_structured_address_holder"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingEnd="@dimen/activity_margin">

    <org.fossify.commons.views.MyEditText
        android:id="@+id/contact_street"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:hint="@string/rc_street"
        android:inputType="textCapWords"
        android:lines="1"
        android:maxLines="1"
        android:singleLine="true"
        android:textCursorDrawable="@null"
        android:textSize="@dimen/bigger_text_size"/>

    <org.fossify.commons.views.MyTextView
        android:id="@+id/contact_structured_address_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/contact_street"
        android:layout_alignTop="@+id/contact_street"
        android:layout_alignParentEnd="true"
        android:background="?attr/selectableItemBackground"
        android:paddingLeft="@dimen/medium_margin"
        android:paddingRight="@dimen/medium_margin"
        android:text="@string/rc_address"
        android:textSize="@dimen/bigger_text_size"/>

    <LinearLayout
        android:id="@+id/contact_neighborhood_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/contact_street"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <org.fossify.commons.views.MyEditText
            android:id="@+id/contact_neighborhood"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/rc_neighborhood"
            android:inputType="textCapWords"
            android:lines="1"
            android:maxLines="1"
            android:singleLine="true"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/bigger_text_size"/>

        <org.fossify.commons.views.MyEditText
            android:id="@+id/contact_pobox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/rc_pobox"
            android:inputType="textCapWords"
            android:lines="1"
            android:maxLines="1"
            android:singleLine="true"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/bigger_text_size"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/contact_city_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/contact_neighborhood_holder"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <org.fossify.commons.views.MyEditText
            android:id="@+id/contact_postcode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/rc_postcode"
            android:inputType="textCapWords"
            android:lines="1"
            android:maxLines="1"
            android:singleLine="true"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/bigger_text_size"/>

        <org.fossify.commons.views.MyEditText
            android:id="@+id/contact_city"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/rc_city"
            android:inputType="textCapWords"
            android:lines="1"
            android:maxLines="1"
            android:singleLine="true"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/bigger_text_size"/>
    </LinearLayout>

    <org.fossify.commons.views.MyEditText
        android:id="@+id/contact_region"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/contact_city_holder"
        android:hint="@string/rc_region"
        android:inputType="textCapWords"
        android:lines="1"
        android:maxLines="1"
        android:singleLine="true"
        android:textCursorDrawable="@null"
        android:textSize="@dimen/bigger_text_size"/>

    <org.fossify.commons.views.MyEditText
        android:id="@+id/contact_country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/contact_region"
        android:hint="@string/rc_country"
        android:inputType="textCapWords"
        android:lines="1"
        android:maxLines="1"
        android:singleLine="true"
        android:textCursorDrawable="@null"
        android:textSize="@dimen/bigger_text_size"/>
</RelativeLayout>
